work done between 2005 and 2008